# DepthZNCC

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clinfo.md  configure.sh
scripts/: log.csv  plotter.ipynb  test.ipynb
src/: main.cpp
src/kernels/: vector_add_kernel.cl  zncc_kernels.cl  zncc_kernels_3.cl  zncc_kernels_naive.cl  zncc_kernels_old.cl  zncc_kernels_opt1.cl  zncc_kernels_opt2.cl  zncc_kernels_opt3.cl  zncc_opt_kernels.cl
src/utils/: ScopeBasedTimer.cpp  ScopeBasedTimer.hpp  clchecks.cpp  clchecks.hpp  datatools.cpp  datatools.hpp  scope_based_timer.cpp  scope_based_timer.hpp
src/zncc/: zncc.cpp  zncc.hpp  zncc_common.cpp  zncc_common.hpp  zncc_opencl.cpp  zncc_opencl.hpp
src/zncc/zncc_cuda/: CMakeLists.txt  tmp_cuda.cu  tmp_cuda.cuh  zncc_cuda.cu  zncc_cuda.cuh
